Some unchecked in work from yesterday's scale-up tests. Fixed a bug where a transaction that didn't have execute any queries would never be committed. Complete overhaul of ExecutionSiteHelper. We are now more aggressive in cleaning up TransactionStates Added a bunch of new tuning parameters to default.properties. We really should get a proper configuration file one of these days... Working on MarkovCostModel to generate numbers on the accuracy of our model predictions
git-svn-id: https://database.cs.brown.edu/svn/hstore/branches/markov-branch@1920 7a8f3d5b-8c5f-44cb-9125-2414a256df87