@@ -2198,11 +2198,14 @@ H-STORE REMIX
     </condition>
 
     <java fork="yes" classname="edu.mit.hstore.HStoreSite">
-        <jvmarg value="-Xmx${volt.server.memory}m" />
+        <jvmarg value="-Xmx${hstore.node.memory}m" />
         <jvmarg value="-Dlog4j.configuration=${basedir}/log4j.properties"/>
         <jvmarg value="-server" />
         <jvmarg value="-Djava.library.path=${build.dir}/nativelibs" />
         <jvmarg value="-Xcheck:jni" />
+<!--        <jvmarg value="-XX:+UseParNewGC" />
+        <jvmarg value="-XX:+UseConcMarkSweepGC" />-->
+
         <jvmarg value="-Dhstore.preload=${hstore.node.preload}" />
         <arg value="catalog.jar=${benchmark.jar}" />
         <arg value="node.site=${node.site}" />
@@ -2211,6 +2214,8 @@ H-STORE REMIX
         <arg value="node.force_singlepartition=${hstore.node.force_singlepartition}" />
         <arg value="node.force_localexecution=${hstore.node.force_localexecution}" />
         <arg value="node.force_neworderinspect=${hstore.node.force_neworderinspect}" />
+        <arg value="node.cleanup_interval=${hstore.node.cleanup_interval}" />
+        <arg value="node.cleanup_txn_expire=${hstore.node.cleanup_txn_expire}" />
         <arg value="coordinator.host=${hstore.coordinator.host}" />
         <arg value="coordinator.port=${hstore.coordinator.port}" />
         <arg value="dtxn.conf=${build.dtxn.dir}/hstore.conf" />
